--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 media/
+staticfiles/
 
 # Virtual Environment
 venv/
@@ -36,6 +37,29 @@ ENV/
 env.bak/
 venv.bak/
 
+# Node.js / React (Frontend)
+node_modules/
+/frontend/node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/frontend/build/
+/frontend/.pnp
+/frontend/.pnp.js
+/frontend/coverage/
+
+# Environment Variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+/frontend/.env
+/frontend/.env.local
+/frontend/.env.development.local
+/frontend/.env.test.local
+/frontend/.env.production.local
+
 # IDE
 .vscode/
 .idea/
@@ -43,7 +67,7 @@ venv.bak/
 *.swo
 *~
 
-# OS
+# OS Generated Files
 .DS_Store
 .DS_Store?
 ._*
@@ -52,22 +76,40 @@ venv.bak/
 ehthumbs.db
 Thumbs.db
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
 # Logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/frontend/npm-debug.log*
+/frontend/yarn-debug.log*
+/frontend/yarn-error.log*
 
-# Coverage directory used by tools like istanbul
-coverage/
-
-# Temporary files
+# Cache and temporary files
+.cache/
+.parcel-cache/
+.eslintcache
 *.tmp
 *.temp
+
+# Build outputs
+/frontend/build/
+/frontend/dist/
+
+# Coverage reports
+coverage/
+*.lcov
+.nyc_output
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Optional npm cache directory
+.npm
+
+# Yarn
+.yarn-integrity
+*.tgz
+
+# Editor directories and files
+.vscode-test
